--- a/Compositional Layout/Base.lproj/Main.storyboard
+++ b/Compositional Layout/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2Sf-aX-GOz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -22,60 +22,21 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Obs-Nw-fFw">
                                     <size key="itemSize" width="285" height="156"/>
-                                    <size key="headerReferenceSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FoodItemCollectionViewCell" id="QuA-qJ-deL" customClass="FoodItemCollectionViewCell" customModule="Compositional_Layout" customModuleProvider="target">
-                                        <rect key="frame" x="64.5" y="50" width="285" height="156"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FoodItemCollectionViewCell" id="QuA-qJ-deL">
+                                        <rect key="frame" x="64.5" y="0.0" width="285" height="156"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vwE-Gd-yDB">
                                             <rect key="frame" x="0.0" y="0.0" width="285" height="156"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndw-j5-LeK">
-                                                    <rect key="frame" x="15" y="120" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LSJ-GG-IJS">
-                                                    <rect key="frame" x="210" y="48" width="60" height="60"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="4ca-Xv-36v"/>
-                                                        <constraint firstAttribute="height" constant="60" id="ZaR-Pf-JLi"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okI-3A-3ir">
-                                                    <rect key="frame" x="15" y="15" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="LSJ-GG-IJS" firstAttribute="centerY" secondItem="vwE-Gd-yDB" secondAttribute="centerY" id="58z-8U-23R"/>
-                                                <constraint firstItem="okI-3A-3ir" firstAttribute="leading" secondItem="vwE-Gd-yDB" secondAttribute="leading" constant="15" id="9Dc-pM-7xH"/>
-                                                <constraint firstAttribute="bottom" secondItem="ndw-j5-LeK" secondAttribute="bottom" constant="15" id="FuM-7a-B3G"/>
-                                                <constraint firstItem="ndw-j5-LeK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="okI-3A-3ir" secondAttribute="bottom" constant="10" id="NId-bW-ZvA"/>
-                                                <constraint firstItem="okI-3A-3ir" firstAttribute="top" secondItem="vwE-Gd-yDB" secondAttribute="top" constant="15" id="aqg-pP-H8u"/>
-                                                <constraint firstItem="ndw-j5-LeK" firstAttribute="leading" secondItem="okI-3A-3ir" secondAttribute="leading" id="jwL-8c-8x3"/>
-                                                <constraint firstAttribute="trailing" secondItem="LSJ-GG-IJS" secondAttribute="trailing" constant="15" id="t8j-i0-x1R"/>
-                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="285" height="156"/>
-                                        <connections>
-                                            <outlet property="imageView" destination="LSJ-GG-IJS" id="0YB-Qy-iMH"/>
-                                            <outlet property="labelSubtitle" destination="ndw-j5-LeK" id="1w7-vE-nnD"/>
-                                            <outlet property="labelTitle" destination="okI-3A-3ir" id="gbG-XE-8a2"/>
-                                        </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeaderCollectionReusableView" id="eHw-bb-vJO" customClass="HeaderCollectionReusableView" customModule="Compositional_Layout" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="PZx-Nt-61c"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="U9W-OP-HsP"/>
@@ -99,24 +60,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="93.75"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="SMS-A5-7GJ">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2Sf-aX-GOz" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vvh-8G-NVo">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nLp-bY-hCz"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Whe-ED-W3Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="93.75"/>
         </scene>
     </scenes>
     <resources>
