--- a/Compositional Layout/Base.lproj/Main.storyboard
+++ b/Compositional Layout/Base.lproj/Main.storyboard
@@ -61,16 +61,80 @@
             </objects>
             <point key="canvasLocation" x="3739.130434782609" y="-234.375"/>
         </scene>
-        <!--View Controller-->
+        <!--TraditionalVC-->
         <scene sceneID="XWG-bd-nCM">
             <objects>
-                <viewController id="3ZR-Hh-6XA" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TraditionalVC" id="3ZR-Hh-6XA" customClass="TraditionalVC" customModule="Compositional_Layout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fYQ-Et-WmY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5gd-Cs-NsV">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="184" id="wXX-0p-uFM" customClass="TableViewCell" customModule="Compositional_Layout" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="184"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wXX-0p-uFM" id="DVZ-4c-DQy">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="miD-FT-Ddf">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GNs-QV-rr3">
+                                                        <size key="itemSize" width="128" height="128"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="o9q-Tp-kpo" customClass="CollectionViewCell" customModule="Compositional_Layout" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="28" width="128" height="128"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kFj-u2-LhQ">
+                                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                            </collectionViewCellContentView>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="wXX-0p-uFM" id="oxH-8m-P2y"/>
+                                                        <outlet property="delegate" destination="wXX-0p-uFM" id="oFw-GY-G4b"/>
+                                                    </connections>
+                                                </collectionView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="miD-FT-Ddf" secondAttribute="bottom" id="FJc-WE-Dl0"/>
+                                                <constraint firstAttribute="trailing" secondItem="miD-FT-Ddf" secondAttribute="trailing" id="Vdt-eG-kSR"/>
+                                                <constraint firstItem="miD-FT-Ddf" firstAttribute="leading" secondItem="DVZ-4c-DQy" secondAttribute="leading" id="nTo-2e-FX1"/>
+                                                <constraint firstItem="miD-FT-Ddf" firstAttribute="top" secondItem="DVZ-4c-DQy" secondAttribute="top" id="vTD-v1-xNa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="collectionView" destination="miD-FT-Ddf" id="kfE-8C-A1S"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="3ZR-Hh-6XA" id="zgs-n0-w9v"/>
+                                    <outlet property="delegate" destination="3ZR-Hh-6XA" id="btB-n7-kZY"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="zcM-dn-kE4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5gd-Cs-NsV" firstAttribute="top" secondItem="fYQ-Et-WmY" secondAttribute="top" id="5r0-OW-U3p"/>
+                            <constraint firstItem="5gd-Cs-NsV" firstAttribute="leading" secondItem="zcM-dn-kE4" secondAttribute="leading" id="7wH-V7-BiI"/>
+                            <constraint firstAttribute="bottom" secondItem="5gd-Cs-NsV" secondAttribute="bottom" id="NYr-pd-9p5"/>
+                            <constraint firstItem="5gd-Cs-NsV" firstAttribute="trailing" secondItem="zcM-dn-kE4" secondAttribute="trailing" id="t0I-rp-OrK"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="5gd-Cs-NsV" id="OOQ-x2-40F"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="acv-za-23M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
