Add header in ui

--- a/Compositional Layout/Base.lproj/Main.storyboard
+++ b/Compositional Layout/Base.lproj/Main.storyboard
@@ -70,16 +70,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5gd-Cs-NsV">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="100" width="414" height="796"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="tHg-fG-49n">
-                                    <rect key="frame" x="0.0" y="233.00000034679067" width="414" height="1"/>
+                                    <rect key="frame" x="0.0" y="273.00000034679067" width="414" height="1"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </view>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="HeaderCell" rowHeight="40" id="H2Y-su-7zW">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="40"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H2Y-su-7zW" id="OkR-qx-mF8">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OUI-xw-jWg">
+                                                    <rect key="frame" x="5" y="0.0" width="404" height="40"/>
+                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="OUI-xw-jWg" secondAttribute="trailing" constant="5" id="CNa-vb-3Ey"/>
+                                                <constraint firstItem="OUI-xw-jWg" firstAttribute="top" secondItem="OkR-qx-mF8" secondAttribute="top" id="XV5-Sw-13U"/>
+                                                <constraint firstAttribute="bottom" secondItem="OUI-xw-jWg" secondAttribute="bottom" id="bYM-Ws-ygU"/>
+                                                <constraint firstItem="OUI-xw-jWg" firstAttribute="leading" secondItem="OkR-qx-mF8" secondAttribute="leading" constant="5" id="uR6-4G-oHn"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="184" id="wXX-0p-uFM" customClass="TableViewCell" customModule="Compositional_Layout" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="184"/>
+                                        <rect key="frame" x="0.0" y="64.5" width="414" height="184"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wXX-0p-uFM" id="DVZ-4c-DQy">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
@@ -131,7 +151,7 @@
                         <viewLayoutGuide key="safeArea" id="zcM-dn-kE4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="5gd-Cs-NsV" firstAttribute="top" secondItem="fYQ-Et-WmY" secondAttribute="top" id="5r0-OW-U3p"/>
+                            <constraint firstItem="5gd-Cs-NsV" firstAttribute="top" secondItem="fYQ-Et-WmY" secondAttribute="top" constant="100" id="5r0-OW-U3p"/>
                             <constraint firstItem="5gd-Cs-NsV" firstAttribute="leading" secondItem="zcM-dn-kE4" secondAttribute="leading" id="7wH-V7-BiI"/>
                             <constraint firstAttribute="bottom" secondItem="5gd-Cs-NsV" secondAttribute="bottom" id="NYr-pd-9p5"/>
                             <constraint firstItem="5gd-Cs-NsV" firstAttribute="trailing" secondItem="zcM-dn-kE4" secondAttribute="trailing" id="t0I-rp-OrK"/>
